finish updateLevel + calcLevel (CUSTOM) v0.0.0:13a